# personalhub

./: .dockerignore  .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  Caddyfile  Caddyfile.dev  Dockerfile  Makefile  README.md  TODO-Current.md  TODO.md  deploy.sh  docker-cheatsheet  docker-compose.yml  entrypoint.sh  justfile  pyproject.toml
.github/workflows/: django.yml
apps/blog/: apps.py
apps/core/: apps.py  sitemaps.py  urls.py  views.py
apps/core/templates/core/: about.html  contact.html  home.html  work.html
apps/core/templatetags/: hreflang_tags.py
apps/core/tests/: conftest.py  test_components.py  test_docker_config.py  test_error_pages.py  test_urls.py  test_views.py
apps/projects/: apps.py
assets/branding/: kuz-brand.html  og-card.html
assets/branding/og-cards/: og-card.html
config/: asgi.py  urls.py  urls_test.py  wsgi.py
config/settings/: base.py  dev.py  prod.py  staging.py  test.py
demos/: index.html
locale/de/LC_MESSAGES/: django.mo  django.po
locale/en/LC_MESSAGES/: django.mo  django.po
locale/es/LC_MESSAGES/: django.mo  django.po
locale/it/LC_MESSAGES/: django.mo  django.po
locale/uk/LC_MESSAGES/: django.po
scripts/: dev.sh
static/css/: home.css  main.css
static/js/: main.js  theme.js  vimNav.js
static/scss/: custom.scss
templates/: 400.html  403.html  403_csrf.html  404.html  410.html  4xx_base.html  500.html  base.html  coming_soon.html  robots.txt
templates/components/: _alerts.html  _footer.html  _nav.html  _shortcutsModal.html  _toasts.html
